syntax = "proto3";

package location;
option go_package = "/location";
// protoc --go_out=. --go-grpc_out=. location.proto

service LocationService {
    rpc SaveAddress (SaveAddressRequest) returns (SaveAddressResponse);
}

message SaveAddressRequest {
    string street = 1;
    string number = 2;
    string apartment_suite = 3;
    string city = 4;
    string postal_code = 5;
    string country = 6;
}

message SaveAddressResponse {
    bool success = 1;
    string id = 2;
}